change Scan Barcodes to Scan MRZ code

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
-  <ion-button expand="full" (click)="navigate()">Scan Barcodes</ion-button>
+  <ion-button expand="full" (click)="navigate()">Scan MRZ code</ion-button>
   <pre>
     {{mrzRawText}}
   </pre>
