move camera permission request to the mrz scanner component

--- a/src/app/scanner/scanner.page.html
+++ b/src/app/scanner/scanner.page.html
@@ -1,5 +1,6 @@
 
 <div>
+  <app-mrzscanner></app-mrzscanner>
   <ion-fab vertical="bottom" horizontal="start" slot="fixed">
     <ion-fab-button>
       <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
