--- a/src/app/scanner/scanner.page.html
+++ b/src/app/scanner/scanner.page.html
@@ -1,6 +1,8 @@
 
 <div>
-  <app-mrzscanner></app-mrzscanner>
+  <app-mrzscanner
+    (onMRZRead)="onMRZRead($event)"
+  ></app-mrzscanner>
   <ion-fab vertical="bottom" horizontal="start" slot="fixed">
     <ion-fab-button>
       <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
