use monospace ion-label to display the mrz result

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 <ion-content [fullscreen]="true">
   <ion-button expand="full" (click)="navigate()">Scan MRZ code</ion-button>
-  <pre>
+  <ion-label class="ion-text-wrap monospace">
     {{mrzRawText}}
-  </pre>
+  </ion-label>
 </ion-content>
