--- a/src/app/scanner/scanner.page.html
+++ b/src/app/scanner/scanner.page.html
@@ -1,6 +1,7 @@
 
 <div>
   <app-mrzscanner
+    license = "DLS2eyJoYW5kc2hha2VDb2RlIjoiMjAwMDAxLTE2NDk4Mjk3OTI2MzUiLCJvcmdhbml6YXRpb25JRCI6IjIwMDAwMSIsInNlc3Npb25QYXNzd29yZCI6IndTcGR6Vm05WDJrcEQ5YUoifQ=="
     (onMRZRead)="onMRZRead($event)"
   ></app-mrzscanner>
   <ion-fab vertical="bottom" horizontal="start" slot="fixed">
